# DirectFB

./: ++DFB.vcxproj  ++DFB.vcxproj.filters  ++dfb-config.in  ++dfb.pc.in  ++dfb.spec.in  .cvsignore  .gitignore  .travis.yml  AUTHORS  BUGS  CMakeLists.txt  CODING_STYLE  ChangeLog  DiVine.vcxproj  DiVine.vcxproj.filters  FusionDale.vcxproj  FusionDale.vcxproj.filters  Makefile.am  NEWS  NOTES  README  README.++DFB  README.DiVine  README.FusionDale  README.FusionSound  README.OSX  README.SaWMan  README.screenshots  TODO  acconfig.h  autogen.sh  configure.in  directfb-avifile.pc.in  directfb-config.in  directfb-internal.pc.in  directfb-swf.pc.in  directfb.pc.in  directfb.spec.in  divine.pc.in  fb.modes  (+5 more)
++dfb/: ++dfb_internal.h  Makefile.am  dfb++.cpp  dfb++_internal.h  idirectfb.cpp  idirectfbdatabuffer.cpp  idirectfbdisplaylayer.cpp  idirectfbeventbuffer.cpp  idirectfbfont.cpp  idirectfbimageprovider.cpp  idirectfbinputdevice.cpp  idirectfbpalette.cpp  idirectfbscreen.cpp  idirectfbsurface.cpp  idirectfbvideoprovider.cpp  idirectfbwindow.cpp  ppdfb.cpp
build-android/: .gitignore  AndroidManifest.xml  Makefile.am  README  config.h  directfb-env.mk  directfb.mk  directfb_build.h  generate.sh  prepare.sh
docs/: .cvsignore  .gitignore  Compositing Application Manager.pptx  Core_Interfaces.txt  DirectFB Core Architecture.sxi  GeneFX.odp  Makefile.am  README.mga-tv  ReferenceMaps.txt  SecureFusion.odp  SecureFusion_Status.txt  Window Updates.pptx  dfbg.1.in  directfb-csource.1.in  directfbrc.5.in  fusionsoundrc.5.in  initialization.txt
drivers/: Makefile.am  alsa.c  oss.c  wave.c
examples/: .cvsignore  .gitignore  Makefile.am  advanced.c  ce_tune.c  ce_tuner.h  coma_test.c  cursor2.c  data_test.c  df_andi.c  df_dok.c  df_dok.results  df_dok_benchmark  df_fire.c  df_joystick.c  df_layer.c  df_particle.c  df_porter.c  df_stress.c  df_video.c  df_video_particle.c  df_window.c  dfbapp.cpp  dfbapp.h  dfbimage.cpp  dfbplay.cpp  dfbshow.cpp  dfbswitch.cpp  divine-test.c  fdmaster.c  font.data  fsmaster.c  loader.c  meter.c  music.c  music_loader.c  player.c  pss.c  scope.c  scroll_vertical.spooky  (+5 more)
flux/: .gitignore  Makefile.am  TODO  fluxcomp.cpp
gfxdrivers/: Makefile.am
include/: ++dfb.h  .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  dfb_types.h  dfiff.h  dgiff.h  directfb++.h  directfb.h  directfb_build.h.in  directfb_graphics.h  directfb_internals.h  directfb_keyboard.h  directfb_util.h  directfb_version.h.in  directfb_water.h  directfb_windows.h  directfbgl.h  directfbgl2.h  divine.h  fusiondale.h  fusiondale_util.h  fusiondale_version.h.in  fusionsound.h  idirectfb.h  idirectfbdatabuffer.h  idirectfbdisplaylayer.h  idirectfbeventbuffer.h  idirectfbfont.h  idirectfbimageprovider.h  idirectfbinputdevice.h  idirectfbpalette.h  idirectfbscreen.h  idirectfbsurface.h  idirectfbvideoprovider.h  idirectfbwindow.h  mknames.sh  sawman.h  sawman_manager.h  (+1 more)
inputdrivers/: Makefile.am
interfaces/: Makefile.am  idirectfbfont_default.c  idirectfbfont_ft2.c  idirectfbimageprovider_gif.c  idirectfbimageprovider_jpeg.c  idirectfbimageprovider_png.c  idirectfbvideoprovider.c  idirectfbvideoprovider.h  idirectfbvideoprovider_avifile.cpp  idirectfbvideoprovider_libmpeg3.c  idirectfbvideoprovider_swf.c  idirectfbvideoprovider_v4l.c
lib/: Makefile.am  divine.c
one/: Makefile.am  icoma_one.c  icoma_one.h  icomacomponent_one.c  ifusiondale_one.c  ifusiondale_one.h  ifusiondalemessenger_one.h
patches/: Makefile.am  README.aty128fb-2.4.12-benh.patch  README.aty128fb-2.4.16_to_benh.patch  README.aty128fb-2.4.6-benh-andi.patch  README.aty128fb-fixes-patch-2.4.6  README.atyfb_patch_2.4.0-andi  README.davincifb  README.fusion  README.matroxfb-vsync-irq-patch  README.neofb  README.neofb-0.2.1-patch-2.4.6  README.radeonfb-r300fix  README.rivafb-smemlen  README.savagefb  agpgart-noroot-2.6.10.patch.bz2  aty128fb-2.4.12-benh.patch.bz2  aty128fb-2.4.16_to_benh.patch.bz2  aty128fb-2.4.6-benh-andi.patch  aty128fb-2.4.6-benh-andi.patch.bz2  aty128fb-fixes-patch-2.4.6.bz2  aty128fb_patch_2.4.0-andi  davincifb-triple-osd0-2.6.10.patch.bz2  fusion-all-linux-2.4.20-pre11.patch.bz2  fusion-full-linux-2.4.16.patch.bz2  fusion-full-linux-2.4.20-rc1.patch.bz2  fusion-full-linux-2.4.20.patch.bz2  fusion-full-linux-2.4.21-pre3.patch.bz2  fusion-full-linux-2.4.21-pre7.patch.bz2  fusion-full-linux-2.4.21.patch.bz2  fusion-full-linux-2.4.22.patch.bz2  fusion-full-linux-2.4.28.patch.bz2  fusion-full-linux-2.5.66.patch.bz2  fusion-full-linux-2.5.71.patch.bz2  fusion-full-linux-2.6.0-test1.patch.bz2  fusion-full-linux-2.6.0-test7.patch.bz2  fusion-full-linux-2.6.9.patch.bz2  linux-3.8-rc6_GP2D_2013-04-05.patch.bz2  matroxfb-32mb-2.4.20.patch.bz2  matroxfb-32mb.diff.bz2  matroxfb-full-memory-linux-2.4.21-rc2.patch.bz2  (+35 more)
samples/: .cvsignore  .gitignore  Makefile.am  sample1.c  testman.c  testrun.c
src/: .gitignore  CMakeLists.txt  Makefile.am  SaWMan.flux  SaWManManager.flux  SaWManManager_real.cpp  SaWManProcess_real.cpp  SaWMan_includes.h  SaWMan_real.cpp  directfb.c  export_list.sym  fusiondale.c  fusionsound.c  idirectfb.c  idirectfb.h  ifusiondale.c  ifusiondale.h  ifusionsound.c  ifusionsound.h  ifusionsoundbuffer.c  ifusionsoundbuffer.h  ifusionsoundplayback.c  ifusionsoundplayback.h  ifusionsoundstream.c  ifusionsoundstream.h  init.c  init.h  interface.c  interface.h  interface_implementation.h  isawman.c  isawman.h  isawmanmanager.c  isawmanmanager.h  region.c  region.h  sawman.c  sawman_config.c  sawman_config.h  sawman_core.c  (+7 more)
systems/: Makefile.am
tests/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  OneBench.c  OneTest.c  coretest_blit2.c  coretest_task.cpp  coretest_task_fillrect.cpp  dfbtest_alloc.c  dfbtest_blit.c  dfbtest_blit2.c  dfbtest_blit_multi.c  dfbtest_blit_threads.c  dfbtest_clipboard.c  dfbtest_egl.c  dfbtest_egl_compositor.cpp  dfbtest_egl_utils.cpp  dfbtest_eglblit.c  dfbtest_eglimage.cpp  dfbtest_fillrect.c  dfbtest_flip.c  dfbtest_font.c  dfbtest_font_blend.cpp  dfbtest_gears.c  dfbtest_gl1.c  dfbtest_gl2.c  dfbtest_gl3.c  dfbtest_image.c  dfbtest_init.c  dfbtest_input.c  (+51 more)
(+2074 files in other folders)
